nova/nova/templates/ingress-metadata.yaml
---
# Source: nova/templates/ingress-metadata.yaml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: metadata
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  rules:
    - host: metadata
      http:
        paths:
          - path: /
            backend:
              serviceName: nova-metadata
              servicePort: n-meta
    - host: metadata.openstack
      http:
        paths:
          - path: /
            backend:
              serviceName: nova-metadata
              servicePort: n-meta
    - host: metadata.openstack.svc.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: nova-metadata
              servicePort: n-meta
